--- a/package.json
+++ b/package.json
@@ -8,34 +8,36 @@
     "queue": "nodemon src/queue.js"
   },
   "dependencies": {
-    "@sentry/node": "5.20.1",
+    "@sentry/node": "5.22.3",
     "bcryptjs": "^2.4.3",
     "bee-queue": "^1.2.3",
     "cors": "^2.8.5",
-    "date-fns": "^2.0.0-beta.5",
+    "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-handlebars": "^5.1.0",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.7",
+    "mongoose": "^5.10.3",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.6",
     "nodemailer-express-handlebars": "^4.0.0",
-    "pg": "^8.3.0",
+    "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^6.3.4",
+    "sequelize": "^6.3.5",
+    "socket.io": "^2.3.0",
     "youch": "^2.0.10",
     "yup": "^0.29.3"
   },
   "devDependencies": {
-    "eslint": "^7.6.0",
+    "eslint": "^7.8.1",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.2",
     "nodemon": "^2.0.4",
-    "prettier": "^2.0.4",
+    "prettier": "^2.1.1",
     "sequelize-cli": "^6.2.0",
     "sucrase": "^3.10.1"
   }
