--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@sentry/node": "5.22.3",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "bee-queue": "^1.2.3",
     "cors": "^2.8.5",
@@ -21,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.3",
     "multer": "^1.4.2",
+    "node-cron": "^2.0.3",
     "nodemailer": "^6.4.6",
     "nodemailer-express-handlebars": "^4.0.0",
     "pg": "^8.3.3",
