--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bee-queue": "^1.2.3",
     "cors": "^2.8.5",
     "date-fns": "^2.16.1",
+    "date-fns-tz": "^1.1.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
